deploy/security_group.tf
resource "aws_security_group" "allow-ssh" {
  vpc_id = data.aws_vpc.vpc.id
  name   = "${terraform.workspace}-allow-ssh-stack-${var.PROJECT_NAME}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${terraform.workspace}-allow-ssh-stack-${var.PROJECT_NAME}"
  }
}
